# Discord-reminderbot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
cogs/: __init__.py  attendance.py  rollers.py
